# math_work

./: .gitignore  CMakeLists.txt  bookmarks_2023_4_23.html  sigmoid_test
include/: mkl.hpp  std_extention_for_eigen.hpp
include/linear_algebra/: determinant.hpp  matrix.hpp  vector.hpp
script/: build.bat  build.sh
test/: CMakeLists.txt  hello.cpp  linear_algebra.determinant.cpp  linear_algebra.matrix.cpp  linear_algebra.vector.cpp  mkl_test.cpp
